# p8_group_fastapi

./: .env  .gitignore  TODO  config.py  database.py  db.py  main.py  pyproject.toml  setup.cfg
apps/: forms.py  hashing.py  models.py  routers.py  schemas.py
apps/routers/: __init__.py  auth.py  employee.py  products.py
apps/utils/: send_email.py  token.py
static/js/: main.js
templates/: base.html  delete.html  detail.html  main.html  private.html  public.html
templates/auth/: base.html  login.html  register.html
templates/errors/: 404.html
templates/products/: base.html  headers.html  product-add.html  product-details.html  product-list.html
